more layout fixes, alignment should be working

--- a/main.css
+++ b/main.css
@@ -72,7 +72,7 @@ body {
 
 #projects {
 
-	padding: 2.5%; 
+	/*padding: 2.5%; */
 	overflow: hidden;
 	background-color: white; 
 }
@@ -84,11 +84,13 @@ body {
 }
 
 .article-container {
-	width: 45%;
+	width: 44%;
 	height: 250px;
 	min-width: 375px;
 	color: #333 ;
 	display: inline-block;
+	margin-right: 2.5%;
+	margin-left: 2.5%;
 /*	border-width: 1px;
 	border-style: solid;*/
 }
@@ -123,7 +125,7 @@ body {
 article {
 
 	font-size: 82.5%;
-	margin: 5% 5% 5% 5%; 
+	width: 100%;
 	text-align: justify;
 
 }
@@ -188,10 +190,9 @@ a {
 .single-column-article {
 
 	font-size: large; 
-	margin: 0;
-	padding: 0% 5% 0% 5%; 
+	margin: 0% 5% 0% 5%; 
 	float: left;
-	width: 100%;
+	width: 90%%;
 
 }
 .single-column-article p {
@@ -266,10 +267,10 @@ h2 {
 
 	font-size: xx-large;
 	position: absolute;
-	left: 60%;
+	left: 59%;
 	top: 35%;
 	color: white; 
-	width: 20%;
+	width: 15%;
 	text-align: initial;
 }
 
